--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -27,7 +27,7 @@ $table-text-align: left !default;
 $content-width: 800px !default;
 
 $on-mobile: 375px !default;
-$on-palm: 600px !default;
+$on-palm: 768px !default;
 $on-laptop: 800px !default;
 
 // Use media queries like this:
